# aoc2024

./: Cargo.toml  day1.rs  day1_part2.rs
src/: day2.rs  day2_part2.rs
